==> alexpa940/ch32v307_for_fun/Wiring/ch32v307/twi.c <==
#include <stddef.h>
#include "twi.h"
#include "Arduino.h"

void i2c_custom_init(i2c_t *obj, uint32_t timing,
		  	  	  	   uint8_t remap_s, uint16_t addressingMode, uint16_t ownAddress,
					   uint8_t master)
{

  I2C_InitTypeDef  I2C_InitTSturcture = {0};
  GPIO_InitTypeDef GPIO_InitStructure = {0};
  NVIC_InitTypeDef NVIC_InitStructure;

  if(obj->I2Cx == I2C1)
  {
	  I2C_LocalObject1 = obj;
	  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOB | RCC_APB2Periph_AFIO, ENABLE);

	  if(remap_s == 0)
	  {
		  GPIO_PinRemapConfig(GPIO_Remap_I2C1, DISABLE);
	  } else {
		  GPIO_PinRemapConfig(GPIO_Remap_I2C1, ENABLE);
	  }
	  RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C1, ENABLE);

	  if(remap_s == 0)
	  {
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_6;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);

		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_7;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);
	  }
	  else
	  {

		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_8;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);

		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_9;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);
	  }

  }
  else if (obj->I2Cx == I2C2)
  {
	  I2C_LocalObject2 = obj;

	  if(remap_s == 0)
	  {
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_10;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);

		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_11;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_Init(GPIOB, &GPIO_InitStructure);
	  } else {
		  return; //I2C2 cant be remaped
	  }
  }

  I2C_DeInit(obj->I2Cx);

  I2C_InitTSturcture.I2C_ClockSpeed = timing;
  I2C_InitTSturcture.I2C_Mode = I2C_Mode_I2C;
  I2C_InitTSturcture.I2C_DutyCycle = I2C_DutyCycle_2;
  I2C_InitTSturcture.I2C_OwnAddress1 = ownAddress;
  I2C_InitTSturcture.I2C_Ack = I2C_Ack_Enable;
  I2C_InitTSturcture.I2C_AcknowledgedAddress = addressingMode;
  I2C_Init(obj->I2Cx, &I2C_InitTSturcture);


  obj->addressingMode = addressingMode;
  obj->Address = ownAddress;

  if (master == 0)
  {
	/* Configure the I2C event priority */
	if(obj->I2Cx == I2C1)
	{
		NVIC_InitStructure.NVIC_IRQChannel = I2C1_EV_IRQn;
	}
	else if (obj->I2Cx == I2C2)
	{
		NVIC_InitStructure.NVIC_IRQChannel = I2C2_EV_IRQn;
	}

	NVIC_InitStructure.NVIC_IRQChannelPreemptionPriority = 0;
	NVIC_InitStructure.NVIC_IRQChannelSubPriority        = 0;
	NVIC_InitStructure.NVIC_IRQChannelCmd                = ENABLE;
	NVIC_Init(&NVIC_InitStructure);

	//Configure I2C error interrupt to have the higher priority.

	if(obj->I2Cx == I2C1)
	{
		NVIC_InitStructure.NVIC_IRQChannel = I2C1_ER_IRQn;
	}
	else if (obj->I2Cx == I2C2)
	{
		NVIC_InitStructure.NVIC_IRQChannel = I2C2_ER_IRQn;
	}
	NVIC_Init(&NVIC_InitStructure);

	I2C_ITConfig(obj->I2Cx, I2C_IT_EVT, ENABLE); //Part of the STM32 I2C driver
	I2C_ITConfig(obj->I2Cx, I2C_IT_BUF, ENABLE);
	I2C_ITConfig(obj->I2Cx, I2C_IT_ERR, ENABLE); //Part of the STM32 I2C driver
  }
  else
  {
	  I2C_AcknowledgeConfig(obj->I2Cx, ENABLE);
  }
  obj->init_done = 1;
  obj->isMaster = master;
  obj->remap = remap_s;
}

void i2c_deinit(i2c_t *obj)
{
  if (obj->I2Cx  == I2C1)
  {

	RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C1, DISABLE);
    GPIO_PinRemapConfig(GPIO_Remap_I2C1, DISABLE);
  } else {
	RCC_APB1PeriphClockCmd(RCC_APB1Periph_I2C2, DISABLE);
  }
  I2C_DeInit(obj->I2Cx);
  obj->init_done = 0;
}

ErrorStatus i2c_wait_for_event(I2C_TypeDef* I2Cx, uint32_t I2C_Event)
{
    __IO uint32_t timeout = millis();
    ErrorStatus ret;

    ret = I2C_CheckEvent(I2Cx, I2C_Event);
    while (ret == NoREADY)
    {
        if((millis() - timeout > I2C_DELAY_MAX))
        {
            /*!< Clear AF flag */
            I2C_ClearFlag(I2Cx, I2C_FLAG_AF);

            /*!< STOP condition */
            I2C_GenerateSTOP(I2Cx, ENABLE);

            return ret;
        }
        ret = I2C_CheckEvent(I2Cx, I2C_Event);
    }
    return ret;
}
