==> stm32duino/Arduino_Core_STM8/cores/arduino/stm8/twi.c <==
#include "stm8_def.h"
#include "twi.h"

void i2c_custom_init(i2c_t *obj, uint32_t timing, I2C_AddMode_TypeDef addressingMode,
                     uint16_t ownAddress, uint8_t master)

{
  I2C_LocalObject = obj;


#if defined(STM8Lxx)
  obj->I2Cx = pinmap_peripheral(obj->sda , PinMap_I2C_SDA);
  if(obj->I2Cx == NP) {
     return;
  }

  if (obj->I2Cx  == I2C1)
  {
    CLK_PeripheralClockConfig(CLK_Peripheral_I2C1, ENABLE);
  } else {
    return;
  }
  I2C_DeInit(obj->I2Cx);

  I2C_Init(obj->I2Cx, timing, ownAddress, I2C_Mode_I2C, I2C_DutyCycle_2, I2C_Ack_Enable,
           addressingMode);
  obj->addressingMode = addressingMode;
  obj->Address = ownAddress;
  if (master == 0)
  {
    I2C_ITConfig(obj->I2Cx, (I2C_IT_TypeDef)(I2C_IT_ERR | I2C_IT_EVT | I2C_IT_BUF), ENABLE);
    enableInterrupts();
  }
  obj->init_done = 1;
  obj->isMaster = master;


#elif defined(STM8Sxx)

  void *periph = pinmap_peripheral(obj->sda , PinMap_I2C_SDA);
  if(periph == NP) {
     return;
  }
  
  I2C_DeInit();
  I2C_Init(timing, ownAddress, I2C_DUTYCYCLE_2, I2C_ACK_CURR, addressingMode, (uint8_t)(CLK_GetClockFreq() / 1000000));
  obj->addressingMode = addressingMode;
  obj->Address = ownAddress;
  if (master == 0)
  {
    I2C_ITConfig((I2C_IT_TypeDef)(I2C_IT_ERR | I2C_IT_EVT | I2C_IT_BUF), ENABLE);
    enableInterrupts();
  }
  obj->init_done = 1;
  obj->isMaster = master;
#endif
}

void i2c_deinit(i2c_t *obj)
{
#if defined(STM8Lxx)
  if (obj->I2Cx  == I2C1)
  {
    CLK_PeripheralClockConfig(CLK_Peripheral_I2C1, DISABLE);
  } else {
    return;
  }
  I2C_DeInit(obj->I2Cx);
  obj->init_done = 0;
#elif defined(STM8Sxx)
  I2C_DeInit();
  obj->init_done = 0;
#endif
}

ErrorStatus i2c_wait_for_event(I2C_TypeDef* I2Cx, I2C_Event_TypeDef I2C_Event)
{
    __IO uint8_t timeout = 0xFF;
    ErrorStatus ret;

    ret = I2C_CheckEvent(I2Cx, I2C_Event);
    while (ret == ERROR){
        timeout--;// micro ici
        if(timeout==0) {
            /*!< Clear AF flag */
            I2C_ClearFlag(I2Cx, I2C_FLAG_AF);

            /*!< STOP condition */
            I2C_GenerateSTOP(I2Cx, ENABLE);

            return ret;
        }
        ret = I2C_CheckEvent(I2Cx, I2C_Event);
    }
    return ret;
}

ErrorStatus i2c_wait_for_event(I2C_Event_TypeDef I2C_Event)
{
    __IO uint8_t timeout = 0xFF;
    ErrorStatus ret;

    ret = I2C_CheckEvent(I2C_Event);
    while (ret == ERROR){
        timeout--;// micro ici
        if(timeout==0) {
            /*!< Clear AF flag */
            I2C_ClearFlag(I2C_FLAG_ACKNOWLEDGEFAILURE);

            /*!< STOP condition */
            I2C_GenerateSTOP(ENABLE);

            return ret;
        }
        ret = I2C_CheckEvent(I2C_Event);
    }
    return ret;
}
